mdapipkg/objects/External_Connection__c.object
<CustomObject>
    <description>This object contains names of items (Companies, Organizations, etc) to be used to connect Contacts</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>External_Connection_Type</valueSetName>
        </valueSet>
    </fields>
    <label>External Connection</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>External Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Connections</pluralLabel>
    <recordTypes>
        <fullName>Certification</fullName>
        <active>true</active>
        <label>Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Company_Investment</fullName>
        <active>true</active>
        <label>Company Investment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Course</fullName>
        <active>true</active>
        <label>Course</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Board_Position</fullName>
        <active>true</active>
        <label>External Board Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Connection</fullName>
        <active>false</active>
        <label>External Connection</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Honor_Award</fullName>
        <active>true</active>
        <label>External Honor/Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patent</fullName>
        <active>true</active>
        <label>Patent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Political_Position</fullName>
        <active>false</active>
        <label>Political Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Public_Service</fullName>
        <active>true</active>
        <label>Public Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Publication</fullName>
        <active>true</active>
        <label>Publication</label>
    </recordTypes>
    <recordTypes>
        <fullName>Speaking_Event</fullName>
        <active>true</active>
        <label>Speaking Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Video</fullName>
        <active>true</active>
        <label>Video</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteer</fullName>
        <active>true</active>
        <label>Volunteer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>